# Pirmas_lab_2

./: .gitignore  README.md  all-files.txt
1 strategija/: 1 strategija.cpp  1 strategija.sln  1 strategija.vcxproj  1 strategija.vcxproj.filters  rusiavimas.h
2 Strategija/: 2 Strategija.cpp  2 Strategija.sln  2 Strategija.vcxproj  2 Strategija.vcxproj.filters  failai.cpp  failai.h  vargsiukai.txt
2versija/: 2versija.cpp  2versija.sln  2versija.vcxproj  2versija.vcxproj.filters  failai.cpp  failai.h  kietiakiai.txt  main.cpp  rezultatai.cpp  rezultatai.h  rezultatai.txt  rusiavimas.cpp  rusiavimas.h  studentai100.txt  studentai1000.txt  studentai10000.txt  studentas.cpp  studentas.h  vargsiukai.txt
3 strategija/: 3 strategija.cpp  3 strategija.sln  3 strategija.vcxproj  3 strategija.vcxproj.filters  CMakeLists.txt  CMakeTexts.txt  failai.cpp  failai.h  rusiavimas.h  studentas.cpp  studentas.h  testavimas.cpp
main/: failai.cpp  failai.h  kietiakai.txt  main.cpp  main.sln  main.vcxproj  main.vcxproj.filters  rusiavimas.cpp  rusiavimas.h  studentai1000.txt  studentai10000.txt  studentas.cpp  studentas.h
